	* Added a button <Join and paste> to [Confirm to paste texts] dialog.
	* Add a new make target: update-po to po/Makefile.
	  Thanks caleb for this idea.
	* Better about dialog. Thanks Mario Blättermann for this idea.
	* Added a new menu item: [Invert Color].
	* Add a new option and a new menuitem 'Cursor shape'.
	  Thanks ralesi for this great idea.

  FIX:
	* Remove '>' from URL matching.
	  Thanks BrainWorker for reporting this bug.
	* Fix some typo and syntax in translations texts.
	  VERY THANKS to Vladimir Smolyar.

2011-06-15 Lu, Chao-Ming (Tetralet) <tetralet@gmail.com>
  version 0.9.9~rc9, It will be the version of 0.9.9,
  Release as a rc version in case I forget something.

  FIX:
	* A race condition segfault bug if the locale settings is incorrect and the
	  -e option is failed at the same time.
	* The profile path in help message may not updated after saving the profile.
	  Thanks 夢見草 for report this bug.
	* Some translation strings missed.
	  Thanks Vladimir Smolyar and Niels Martignène for reporting this bug.

  New Feature:
	* Add "screen" to foreground_program_whitelist.
	* A new menu item "Window opacity when inactive" and a new check box menu item
	  "Dim window when inactive", may dim the window when inactive if the screen
	  is composited.
	  Thanks keenerd for this great idea.
	* Add a new color theme 'grayscale'. Thanks BV1AL for this idea.
	* Applied new Franch translation.
	  VERY THANKS to Niels Martignène.
	* Applied new Slovak translation.
	  VERY THANKS to Slavko.

2010-12-10 Lu, Chao-Ming (Tetralet) <tetralet@gmail.com>
  version 0.9.9~rc8

  It is a hotfix version for 0.9.9~rc7.

  FIX:
	* Can not keep correct geometry size under kwin/xfwm4.
	  VERY THANKS to Marco Paolone and Vladimir Smolyar for reporting this
	  stupid bug.

2010-12-6 Lu, Chao-Ming (Tetralet) <tetralet@gmail.com>
  version 0.9.9~rc7

  It is the final preview version of LilyTerm 0.9.9.
  CALL FOR TRANSLATORS!

  FIX: